<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Activity Names-->
    <string name="app_name">Коллекция Цитат</string>
    <string name="widget_activity_string">Настройки Виджета</string>
    <string name="about_app_activity_stripng">О Приложении</string>

    <!--Drawer Strings-->
    <string name="drawer_open">Меню</string>
    <string name="quote_button_text"> Твоя Цитата Дня</string>
    <string name="theme_button_text">Темы</string>
    <string name="user_themes_button_text">Мой Темы</string>
    <string name="setting_button_text">Настройки</string>
    <string name="widget_setting_button_text">Настройки Виджета</string>
    <string name="about_app_button_text">О Приложении</string>
    <string name="favorite_quote_button_text">Любимые цитаты</string>

    <!--Action Bar TitleText-->
    <string name="quote_of_all_selected_string">Цитата</string>

    <!--Temp String-->
    <string name="user_theme_name_string">Пользовательские цитаты</string>
    <string name="user_theme_description_string">В эту тему вы можете добавлять свои цитаты</string>

    <string name="load_data_string">Инициализация данных</string>

    <!--Toast Information String-->
    <string name="quote_add_to_favorite_toast_string">Цитата добавлена к списку любимых!</string>
    <string name="quote_remove_from_favorite_toast_string">Цитата удалена из любимых!</string>

    <!--You have no one Favorite Quote-->
    <string name="you_have_no_one_favorite_quote_string">У Вас пока что нету ни одной любимой цитаты</string>
    <string name="to_add_quote_to_favrite_string">Для того чтобы добавить цитату в любимые: найдите пустые мозги возле цитаты, нажмите на них</string>
    <string name="when_brain_will_be_full_string">Когда иконка мозга будет заполнена черным, цитата добавлена в любимые!</string>

    <!--About App Text-->

    <string name="theme_on_phone_string">Тем</string>
    <string name="quote_on_phone_string">Цитат</string>
    <string name="favorite_quote_string">Любимых Цитат</string>

    <!--Widget Setting Text-->
    <string name="quote_settings_mode_string">Цитаты в Виджете</string>

    <!--Array-->
    <string-array name="widget_mode_araay_string">
        <item>Цитата Дня</item>
        <item>Случайная Цитата</item>
        <item>Случайная Любимая Цитата</item>
    </string-array>
    <!--&lt;!&ndash;Activity Names&ndash;&gt;-->
    <!--<string name="app_name">Unforgettable</string>-->
    <!--<string name="widget_activity_string">Widget Setting</string>-->
    <!--<string name="about_app_activity_stripng">About App</string>-->

    <!--&lt;!&ndash;Drawer Strings&ndash;&gt;-->
    <!--<string name="drawer_open">Menu</string>-->
    <!--<string name="quote_button_text">Your Quote of The Day</string>-->
    <!--<string name="theme_button_text">Themes</string>-->
    <!--<string name="user_themes_button_text">My Themes</string>-->
    <!--<string name="setting_button_text">Setting</string>-->
    <!--<string name="widget_setting_button_text">Widget Setting</string>-->
    <!--<string name="about_app_button_text">About App</string>-->
    <!--<string name="favorite_quote_button_text">Favorite Quote</string>-->

    <!--&lt;!&ndash;Action Bar TitleText&ndash;&gt;-->
    <!--<string name="quote_of_all_selected_string">Quote</string>-->

    <!--&lt;!&ndash;Temp String&ndash;&gt;-->

    <!--<string name="user_theme_name_string">User Theme</string>-->
    <!--<string name="user_theme_description_string">You can add your quote in this Theme</string>-->

    <!--&lt;!&ndash;Toast Information String&ndash;&gt;-->
    <!--<string name="quote_add_to_favorite_toast_string">Quote add to favorite!</string>-->
    <!--<string name="quote_remove_from_favorite_toast_string">Quote remove from favorite!</string>-->

    <!--&lt;!&ndash;You have no one Favorite Quote&ndash;&gt;-->
    <!--<string name="you_have_no_one_favorite_quote_string">You haven"'"t no one Favorite Quote</string>-->
    <!--<string name="to_add_quote_to_favrite_string">To add quote to favorite find empty brain and push them</string>-->
    <!--<string name="when_brain_will_be_full_string">When brain will be full, quote added to favorite</string>-->

    <!--&lt;!&ndash;About App Text&ndash;&gt;-->

    <!--<string name="theme_on_phone_string">Theme on Phone</string>-->
    <!--<string name="quote_on_phone_string">Quote on Phone</string>-->
    <!--<string name="favorite_quote_string">Favorite Quote</string>-->


    <!--&lt;!&ndash;Widget Setting Text&ndash;&gt;-->
    <!--<string name="quote_settings_mode_string">Quote in Widget</string>-->

    <!--&lt;!&ndash;Array&ndash;&gt;-->
    <!--<string-array name="widget_mode_araay_string">-->
        <!--<item>Quote of the Day</item>-->
        <!--<item>Random Quote</item>-->
        <!--<item>Random Favorite Quote</item>-->
    <!--</string-array>-->
</resources>
